# ssi-jwk-gen

app/: package-lock.json  package.json  webpack.config.js
app/src/: App.svelte
lib/: rollup.config.js
lib/crate/: Cargo.toml
lib/crate/src/: lib.rs
lib/src/: index.ts  index_core.ts  jwkgen.ts
