[package]
name = "jwkgen"
version = "0.0.1"
authors = ["K <kelseydrhoda@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

# crate-type = ["cdylib", "rlib"]

# [features]
# default = ["console_error_panic_hook"]

[dependencies]
siwe-recap = "0.1.0"
did-method-key = "0.2.1"
console_error_panic_hook = "0.1"
rand = { version = "0.7", features = ["wasm-bindgen"] }
getrandom = { version = "0.2", features = ["js"] }
hex = "0.4.3"
iri-string = "0.6.0"
js-sys = "0.3.59"
kepler-sdk = { git = "https://github.com/spruceid/kepler" }
kepler-sdk-wasm = { git = "https://github.com/spruceid/kepler" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.83"
serde-wasm-bindgen = "0.4"
siwe = "0.5"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.32"
web-sys = { version = "0.3.59", features = ["console"] }

[dependencies.ssi]
version = "0.6"
features = ["ed25519"]
default-features = false

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
