[package]
name = "jwkgen"
version = "0.0.1"
authors = ["K <kelseydrhoda@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[lib]
# crate-type = ["cdylib"]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
rand = { version = "0.7", features = ["wasm-bindgen"] }
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.83"
siwe = "0.5"
wasm-bindgen = "0.2"

[dependencies.ssi]
version = "0.6"
features = ["ed25519"]
default-features = false

[profile.release]
opt-level = "s"